Last save before deleting AJAX.

--- a/main.html
+++ b/main.html
@@ -7,16 +7,23 @@
     <title>Interactive Interview</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
+    <!-- CSS stylesheets -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
         crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" media="screen" href="main.css" />
 
+    <!-- Bootstrap scripts -->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
         crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
         crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
         crossorigin="anonymous"></script>
+
+    <!-- Jquery, since slim doesn't include ajax load -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+
+    <!-- My own scripts -->
     <script src="main.js"></script>
 </head>
 
@@ -38,17 +45,38 @@
                 <div class="console left-text bg-color-left">
                     <h2>Console</h2>
                     <ol class="chapters-list">
-                        <li><p class="chapters-item" onclick="changeRightSide('Introduction')">Introduction</p></li>
-                        <li><p class="chapters-item" onclick="changeRightSide('Projects')">Projects</p></li>
-                        <li><p class="chapters-item" onclick="changeRightSide('Education')">Backstory</p></li>
+                        <li>
+                            <p class="chapters-item" onclick="changeRightSide('Introduction')">Introduction</p>
+                        </li>
+                        <li>
+                            <p class="chapters-item" onclick="changeRightSide('Projects')">Projects</p>
+                        </li>
+                        <li>
+                            <p class="chapters-item" onclick="changeRightSide('Education')">Education</p>
+                        </li>
                     </ol>
                 </div>
 
             </div>
             <div class="col-md-6 bg-color-right">
-                <p class="blue-text" id="right-heading">Right side</p>
+                <p class="blue-text" id="right-heading">Welcome</p>
+                <script>
+                    $(document).ready(function () {
+                        $("button").click(function () {
+                            $("#div1").load("intro.html");
+                        });
+                    });
+                </script>
+                <div id="div1">
+                    <h2>Let jQuery AJAX Change This Text</h2>
+                </div>
+                <button>Get External Content</button>
             </div>
-
+            <script>
+            document.getElementById("div1").innerHTML='<object type="text/html" data="intro.html" ></object>';
+            </script>
+            
+            
         </div>
     </div>
 </body>
